--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
-title: Odoo Pentesting & Hardening
+title: Pentesting & Hardening Odoo
+subtitle: Odoo Security
 theme: jekyll-theme-minimal
-logo: /images/paranoid-odoo-logo.png
+logo: /../images/paranoid-odoo-logo.png
