--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-title: Pentesting & Hardening Odoo
+title: Auditing & Hardening Odoo
 subtitle: Odoo Security
 theme: jekyll-theme-minimal
-logo: images/paranoid-odoo-logo.png
+logo: paranoidodoo-logo.jpg
