--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 title: Auditing & Hardening Odoo
 subtitle: Odoo Security
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 logo: paranoidodoo-logo.jpg
