--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 title: Auditing & Hardening Odoo
 subtitle: Odoo Security
 theme: jekyll-theme-hacker
-logo: /docs/paranoidodoo-logo.jpg
+logo: paranoidodoo-logo.jpg
